Fix alignment error

--- a/footer.css
+++ b/footer.css
@@ -32,6 +32,7 @@ footer .footLogo {
 .footLogo .footLine {
   font-size: 0.8rem;
   color: var(--bg);
+  text-align: center;
 }
 
 footer .footLinks {
